<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:paddingEnd="24dp"
    android:paddingBottom="16dp"
    android:layout_height="match_parent"
    tools:ignore="RtlSymmetry">

    <ImageView
        android:id="@+id/auth_failed_icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_error_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/auth_failed_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ps_regular"
        android:paddingStart="36dp"
        android:text="@string/fragment_auth_failed_title"
        android:layout_marginTop="28dp"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_failed_icon" />

    <TextView
        android:id="@+id/auth_failed_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/gs_text_regular"
        android:text="@string/fragment_auth_failed_description"
        android:paddingStart="36dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/auth_failed_title" />

    <Button
        android:id="@+id/retry_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/gs_text_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="?android:textColorPrimaryInverse"
        android:text="@string/fragment_auth_failed_retry_button_text"/>

    <Button
        android:id="@+id/error_details_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        style="@style/Widget.Material3.Button.TextButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/fragment_auth_failed_error_details_label"/>

</androidx.constraintlayout.widget.ConstraintLayout>